--- a/dashboard/templates/account/login.html
+++ b/dashboard/templates/account/login.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base.html' %}
 {% load static %}
-
+{% block title %}Login{% endblock title %}
 {% block main-content %}
 <section class="w3l-workinghny-form">
         <div class="workinghny-form-grid">
