--- a/dashboard/templates/account/verification_sent.html
+++ b/dashboard/templates/account/verification_sent.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard/base.html' %}
 {% load static %}
+{% block title %}Verify Email{% endblock title %}
 {% block main-content %}
 <section class="mailsentsec mt-5">
 <div class="container">
