--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -7,7 +7,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Student-Dashboard</title>
+  <title>EduTekBiz | {% block title %} {% endblock title %} </title>
+
+  <link rel="shortcut icon" href="{% static 'dashboard/images/logo1.jpg' %}" type="image/png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 
@@ -163,10 +165,9 @@
                 <div class="footer-heading"><h2>Policy</h2></div>
                  <div class="footer-link">
                   <ul>
-                    <li><a href="#"></a></li>
-                     <li><a href="#">Privacy Policy</a></li>
-                      <li><a href="#">T&C</a></li>
-                       <li><a href="#">FAQ</a></li>   
+                     <li><a href="https://www.freeprivacypolicy.com/live/9a2018fe-0c7f-4b79-b44c-74d2a1e6ac25" target="_blank">Privacy Policy</a></li>
+                      <li><a href="https://www.freeprivacypolicy.com/live/9a2018fe-0c7f-4b79-b44c-74d2a1e6ac25" target="_blank">T&C</a></li>
+                       <li><a href="">FAQ</a></li>   
                   </ul>
                 </div>
               </div>
