--- a/dashboard/templates/dashboard/profile.html
+++ b/dashboard/templates/dashboard/profile.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard/base.html' %} {% load static %}
 {% load crispy_forms_tags%}
+{% block title %}Profile{% endblock title %}
 {% block main-content %}
 <section class="text-center">
     <div class="container mt-5">
