--- a/dashboard/templates/dashboard/updatenote.html
+++ b/dashboard/templates/dashboard/updatenote.html
@@ -1,6 +1,7 @@
 {% extends 'dashboard/base.html' %} 
 {% load static %}
 {% load crispy_forms_tags %}
+{% block title %}Update Note{% endblock title %}
 {% block main-content %}
 
 <div class="container mt-5">
