--- a/dashboard/templates/account/email_confirm.html
+++ b/dashboard/templates/account/email_confirm.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard/base.html' %}
 {% load static %}
+{% block title %}Email confirmation{% endblock title %}
 {% block main-content %}
 {% load i18n %}
 {% load account %}
