--- a/dashboard/templates/account/logout.html
+++ b/dashboard/templates/account/logout.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard/base.html' %}
 {% load static %}
+{% block title %}Logout{% endblock title %}
 {% block main-content %}
 
 <section class="logoutsec mt-5">
