--- a/dashboard/templates/account/password_reset_from_key_done.html
+++ b/dashboard/templates/account/password_reset_from_key_done.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard/base.html' %}
 {% load static %}
+{% block title %}Password Changed{% endblock title %}
 {% block main-content %}
 <section class="passchangednsec mt-5">
 <div class="container">
