--- a/dashboard/templates/dashboard/books.html
+++ b/dashboard/templates/dashboard/books.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard/base.html' %} 
 {% load static %} 
+{% block title %}Books{% endblock title %}
 {% block main-content %}
 
 <section class='text-center container mt-5'>
