--- a/dashboard/templates/dashboard/homework.html
+++ b/dashboard/templates/dashboard/homework.html
@@ -1,7 +1,8 @@
 {% extends 'dashboard/base.html' %} 
 {% load static %}
-{% block main-content %}
 {% load crispy_forms_tags %}
+{% block title %}Homework{% endblock title %}
+{% block main-content %}
 
 {% if hw %}
 <section class="todocont p-3">
